--- a/assets/css/aboutme.css
+++ b/assets/css/aboutme.css
@@ -1,3 +1,18 @@
+body{
+    overflow-y: scroll;
+}
+.aboutme{
+    height: max-content;
+    padding-bottom: 20px;
+}
+.education>h2{
+    text-decoration: underline;
+}
+.education-title{
+    margin: 75px;
+    flex-direction: column;
+    gap: 20px;
+}
 .personal-details{
     align-items: flex-start;
     justify-content: space-between;
@@ -35,7 +50,4 @@
     border: 2px solid gold;
     border-radius: 10px;
     padding: 10px;
-}
-.education{
-    width: 100%;
 }
