--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -19,7 +19,7 @@
   
   .skill-bar {
     width: 70%;
-    background-color: #ddd;
+    background-color: gold;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
@@ -42,7 +42,7 @@
   }
   
   .html {
-    width: 100%;
+    width: 97%;
     background-color: #6d1a07;
   }
   
@@ -53,7 +53,7 @@
   
   .js {
     width: 10%;
-    background-color: #f1c40f;
+    background-color: green;
   }
   
   .python {
