--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -59,11 +59,12 @@ a{
 }
 tr{
     align-items: center;
-    gap: 50px;
+    gap: 100px;
     justify-content: space-between;
     font-size: 1.25rem;
 }
 tr>th, tr>td{
+    margin: 5px;
     align-items: center;
     justify-content: flex-start;
 }
